<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="16dp"
        android:text="@string/label_cliente"
        app:layout_constraintBottom_toTopOf="@+id/editTextCliente"
        app:layout_constraintEnd_toEndOf="@+id/buttonCalcularRendimento"
        app:layout_constraintStart_toStartOf="@+id/textViewResultado" />

    <EditText
        android:id="@+id/editTextCliente"
        android:layout_width="209dp"
        android:layout_height="50dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/hint_cliente"
        android:importantForAutofill="no"
        android:textColorHint="@color/black"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextNumeroConta"
        app:layout_constraintEnd_toStartOf="@+id/editTextNumeroConta"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="18dp"
        android:text="@string/label_numero_conta"
        app:layout_constraintEnd_toEndOf="@+id/editTextNumeroConta"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNumeroConta"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="33dp"
        android:hint="@string/hint_numero_conta"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextCliente"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/label_saldo_inicial"
        app:layout_constraintBottom_toTopOf="@+id/editTextSaldoInicial"
        app:layout_constraintEnd_toEndOf="@+id/editTextSaldoInicial"
        app:layout_constraintStart_toStartOf="@+id/editTextSaldoInicial" />

    <EditText
        android:id="@+id/editTextSaldoInicial"
        android:layout_width="191dp"
        android:layout_height="49dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="176dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="176dp"
        android:hint="@string/hint_saldo_inicial"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/buttonDepositar"
        app:layout_constraintEnd_toStartOf="@+id/editTextValor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="21dp"
        android:text="@string/label_valor"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <EditText
        android:id="@+id/editTextValor"
        android:layout_width="136dp"
        android:layout_height="48dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="37dp"
        android:hint="@string/hint_valor"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextSaldoInicial"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/label_tipo_conta"
        app:layout_constraintBottom_toTopOf="@+id/radioGroupTipoConta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroupTipoConta"
        android:layout_width="288dp"
        android:layout_height="48dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="99dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="99dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/buttonMostrarDados"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.666">

        <RadioButton
            android:id="@+id/radioButtonPoupanca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_conta_poupanca" />

        <RadioButton
            android:id="@+id/radioButtonEspecial"
            android:layout_width="147dp"
            android:layout_height="wrap_content"
            android:text="@string/label_conta_especial" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonDepositar"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="26dp"
        android:text="@string/button_depositar"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonSacar"
        app:layout_constraintEnd_toStartOf="@+id/buttonSacar"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonSacar"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginEnd="14dp"
        android:text="@string/button_sacar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonDepositar"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonCalcularRendimento"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="26dp"
        android:text="@string/button_calcular_rendimento"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonMostrarDados"
        app:layout_constraintEnd_toStartOf="@+id/buttonMostrarDados"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonMostrarDados"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="22dp"
        android:text="@string/button_mostrar_dados"
        app:layout_constraintBottom_toTopOf="@+id/textViewResultado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonCalcularRendimento"
        app:layout_constraintTop_toBottomOf="@+id/buttonSacar" />

    <TextView
        android:id="@+id/textViewResultado"
        android:layout_width="312dp"
        android:layout_height="84dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="156dp"
        android:paddingTop="16dp"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>